--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,8 @@ img.ordenarimg{
 }
 */
 
+
+
 .titulocatalogo{
     /*width: 65%;*/
     padding: 15px;
@@ -266,16 +268,16 @@ main.productos-servicios{
 */
 
 main article.otrosservicios{
+    display: inline-block;
+    height: 1250px;
     text-align: center;
     background-color: #008cff29;
-    border: 5px solid #000000;
-    max-height: 70%;
-    /*width: 40%;*/    
+    border: 5px solid #000000;   
 }
 main article.otrosservicios img{
     display: inline-block;
-    width: 60%;
-    height: 35%;
+    width: 300px;
+    height: 325px;
     border: 2px solid #000000;
 }
 main article.otrosservicios p{
@@ -451,15 +453,3 @@ footer p{
     font-style: oblique;
 }
 
-
-/*MEDIA QUERIES*/
-
-@media (max-width: 768px){
-
-}
-
-
-
-@media (max-width: 420px){
-    
-}
