--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,7 @@ main section.camisetastipo div.textodiseño {
 main article.ubicacion {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   width: 35%;
 }
@@ -117,7 +118,7 @@ aside.productos-servicios .filtro {
   justify-content: center;
   align-items: center;
 }
-aside.productos-servicios .filtro article img.filtrosimg {
+aside.productos-servicios .filtro img.filtrosimg {
   width: 40px;
   height: 40px;
   margin: 5px 20px;
