--- a/sass/config/_colores.scss
+++ b/sass/config/_colores.scss
@@ -1,11 +1,11 @@
 
-$color1: #073b3a;
-$color2: #0b6e4f;
+$color1: #C3B299;
+$color2: #247BA0;
 $color3: #08a045;
 $color4: #6bbf59;
-$color5: #e8f1f2;
-$color6: #0000ff;
+$color5: #FFFCFF;
+$color6: #CBD4C2;
 $color7: #ff0000;
-$color8: #008cff29;
+$color8: #50514F;
 
 
