--- a/sass/layout/_cabeza.scss
+++ b/sass/layout/_cabeza.scss
@@ -22,7 +22,11 @@ header {
             }
         }
         .carousel-inner{
-            height: 125px;
+            height: 250px;
         }
     }
+}
+hr{
+    margin: 0;
+    width: 100%;
 }
