--- a/sass/layout/main-tallas-modelos/_tallasymodelos.scss
+++ b/sass/layout/main-tallas-modelos/_tallasymodelos.scss
@@ -1,65 +1,51 @@
 /*Main tallas-modelos.html*/
 
-
-/*GRILLAS*/
-div.gctallasymodelos{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 0.25fr 4fr 0.5fr;
-    grid-template-areas: 
-        "gctallasymodelosh gctallasymodelosh gctallasymodelosh"
-        "gctallasymodelosm gctallasymodelosm gctallasymodelosm"
-        "gctallasymodelosf gctallasymodelosf gctallasymodelosf"
-    ;
-    header.gctallasymodelosh{
-        grid-area: gctallasymodelosh;
+main.gctallasymodelosm{
+    display: flex;
+    flex-direction: column;
+    align-items: map-get($align, cent);
+    align-content: map-get($align, stc);
+    justify-content: map-get($justi, s-eve);
+    width: 100%;
+    h1{
+        margin-top: 30px;
     }
-    main.gctallasymodelosm{
-        grid-area: gctallasymodelosm;
+    section.tallasymodelos{
         display: flex;
-        flex-direction: column;
         align-items: map-get($align, cent);
-        align-content: map-get($align, stc);
-        justify-content: map-get($justi, s-eve);
-        width: 100%;
-        h1{
-            margin-top: 30px;
+        width: 94%;
+        margin: 3%;
+        border: 1px solid $color1;
+        background-color: $color5;
+        div.tallasymodelos{
+            justify-content: space-around;
         }
-        section.tallasymodelos{
+        div.modelmedid{
             display: flex;
+            flex-direction: column;
             align-items: map-get($align, cent);
-            width: 95%;
-            margin: 20px;
-            border: 1px solid $color1;
-            background-color: $color5;
-            div.imgmodelo{
-                width: 30%;
-                align-items: map-get($align, cent);
-                img.modelo{
-                    width: 90%;
-                    margin: 10px;
-                    border: 1px solid $color1;
-                    border-radius: 3%;
-                }
+            justify-content: center;
+            img.modelo{
+                width: 70%;
+                margin: 2%;
+                border: 1px solid $color1;
+                border-radius: 3%;
             }
-            div.textotallasymodelos{
-                display: flex;
-                flex-direction: column;
-                width: 90%;
-                align-items: map-get($align, cent);
-                margin: 5px 10px;
-            }
-            div.imgmedidas{
-                width: 40%;
-                img.medidas{
-                    width: 90%;
-                    margin: 10px;
-                    border: 1px solid $color1;
-                }
+            img.medidas{
+                width: 96%;
+                margin: 2%;
+                border: 1px solid $color1;
             }
         }
-    }
-    footer.gctallasymodelosf{
-        grid-area: gctallasymodelosf;
+        div.textotallasymodelos{
+            display: flex;
+            flex-direction: column;
+            align-items: map-get($align, cent);
+            justify-content:center;
+            margin: 5px 10px;
+            p{
+                text-align: justify;
+            }
+        }
     }
 }
