--- a/sass/config/_colores.scss
+++ b/sass/config/_colores.scss
@@ -4,8 +4,10 @@ $color2: #247BA0;
 $color3: #08a045;
 $color4: #6bbf59;
 $color5: #FFFCFF;
-$color6: #CBD4C2;
-$color7: #ff0000;
+$color6: #dee8d4;
+$color7: #ffbb00;
 $color8: #50514F;
+$color9: #000000;
+$color10: #247ba065;
 
 
