--- a/sass/layout/main-index/_ubicacion.scss
+++ b/sass/layout/main-index/_ubicacion.scss
@@ -1,11 +1,18 @@
 
 main article.ubicacion{
+    border: 2px black solid;
+    border-radius: 6px;
+    background-color: $color6;
     @include caja(flex, center);
     flex-direction: column;
     align-items: map-get($align, cent);
-    width: 35%;
+    iframe{
+        width: 95%;
+        margin: 15px;
+    }
     h3{
         margin: 20px 40px;
         font-size: 3rem;
+        text-shadow: 3px 3px 5px rgba(95, 95, 95, 0.778);
     }
 }
